fix: toast size, notifications overflow

--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -10,12 +10,11 @@
 }
 
 .Toast {
-	margin: 0 2.344rem;
 	position: relative;
 	padding: 0.75rem;
 	display: flex;
 	gap: 0.75rem;
-	width: 100%;
+	width: calc(100% - 2.344rem * 2);
 	background: #6FCF97;
 	border-radius: 0.375rem;
 	pointer-events: all;
@@ -65,5 +64,6 @@
 
 	@include breakpoints.screen-tablet {
 		max-width: 34.375rem;
+		width: 100%;
 	}
 }
